make the content spaced further away from the sides to be more pleasant. need to fix font and spacing still.

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -4,16 +4,15 @@
 
 
 .articles {
-  .articleholder {
-    $article-padding: 3em;
-
-    &:first-of-type {
-      padding-top: 1em;
-    }
-    &:last-of-type {
-      padding-bottom: 1em;
+  .row:last-of-type {
+    .articleholder {
+      padding-bottom: 2em;
       border-bottom: 0;
     }
+  }
+
+  .articleholder {
+    $article-padding: 3em;
 
     border-bottom: 1px solid #CFCFCF;
 
